add_subdirectory(de-raylib-glfw)
add_subdirectory(de-rlgl-5.0)

add_subdirectory(de-dr_wav-0.14.1)
add_subdirectory(de-dr_flac-0.13.2)
add_subdirectory(de-dr_mp3-0.7.2)
add_subdirectory(de-miniaudio-0.11.23)
add_subdirectory(de-raylib-5.6)
add_subdirectory(de-raygui-5.0)

add_subdirectory(GameSnake)
add_subdirectory(GameBallistic)
add_subdirectory(GameBattleship)