add_subdirectory(de-rack2-jansson)
add_subdirectory(de-rack2-filesystem)
add_subdirectory(de-rack2-fuzzysearchdatabase)
add_subdirectory(de-rack2-glfw)
add_subdirectory(de-rack2-nanosvg)
add_subdirectory(de-rack2-glew-2.1.0)
add_subdirectory(de-rack2-nanovg)
add_subdirectory(de-rack2-osdialog)
add_subdirectory(de-rack2-oui-blendish)
add_subdirectory(de-rack2-pffft)
add_subdirectory(de-rack2-asiosdk-2.3)
add_subdirectory(de-rack2-rtaudio-5.1.0)
add_subdirectory(de-rack2-rtaudio-6.0.1)
add_subdirectory(de-rack2-rtmidi-2.1.1)
add_subdirectory(de-rack2-speexdsp)
add_subdirectory(de-rack2-tinyexpr)
add_subdirectory(de-rack2-stb_image)

add_subdirectory(VCV-Rack2)


# add_subdirectory(1_libs)
# add_subdirectory(2_demos)
# add_subdirectory(ActiveWallpaper)
# add_subdirectory(H3_Siedler)
# add_subdirectory(SonnenSystem_glfw_glew)
# add_subdirectory(F3_FreeLancer)

# add_subdirectory(minimal_vst2x_host)
# add_subdirectory(minimal_vst3_host)
# add_subdirectory(AbletonLive64-qt6) # uses old RtAudio_5
# add_subdirectory(AudioPluginHost-qt6)
# add_subdirectory(AbletonLive64-qt6)
# add_subdirectory(AudioPluginHost-qt6)
# add_subdirectory(minimal_vst2x_host)
# add_subdirectory(BpmStudioLite-qt6)
# add_subdirectory(Raytracing)

#add_subdirectory(test_chrono_vs_benni)
# add_subdirectory(2_examples)
#add_subdirectory(3_extra)
#add_subdirectory(4_bad)
#add_subdirectory(Qt6_DesktopOpenGL)
#add_subdirectory(Qt6_Piano)
#add_subdirectory(de-openexr-3.3.2)
#add_subdirectory(libDarkGDK_2025)
#add_subdirectory(libDarkGDK_2025_examples)
#add_subdirectory(AbletonLive64-qt-v2)
# add_subdirectory(test_chrono_duration_cast)
# add_subdirectory(AudioAnimator3D_irr_sfml_fftw3)
# add_subdirectory(VSTi_fltk)
# add_subdirectory(Audi_Q7-irr)
# add_subdirectory(CommandLine-qt)
# add_subdirectory(hb_paint-win32)
# add_subdirectory(AbletonLive64-qt)
# add_subdirectory(AzimutProjection-wgl)
# add_subdirectory(adtflog2html)
# add_subdirectory(linegraph2d-qt)
# add_subdirectory(Siedler-server-qt)
# add_subdirectory(QCfg)
#add_subdirectory(DarkGDK_2025)
#add_subdirectory(irr_cgal_clip_hmap_2_poly)
# add_subdirectory(scigraph-qt)
