# Compressor
add_subdirectory(de-deflate-1.23)
add_subdirectory(de-zlib-1.2.8)

add_subdirectory(de-bzip2-1.0.5)
# add_subdirectory(de-lzma-4.32.7)
add_subdirectory(de-minizip-1.15)
add_subdirectory(de-unzip-1.01e)
# add_subdirectory(de-tar-1.2.20)
add_subdirectory(de-lzo2-mini-2.10)
add_subdirectory(de-lzo2-2.10)
add_subdirectory(de-lz4-1.10.0)
add_subdirectory(de-b2-0.98.1)
add_subdirectory(de-cpio-1.0.0)
add_subdirectory(de-jsoncpp-1.9.6)
add_subdirectory(de-iconv-1.18)
add_subdirectory(de-xml2-2.9.10)
add_subdirectory(de-gmp-mini-6.3.0)
# add_subdirectory(de-gmp-generic-6.3.0)
add_subdirectory(de-zstd-1.5.7)
add_subdirectory(de-xz-5.8.1-static)
add_subdirectory(de-mbedtls-3.6.4-static)
# add_subdirectory(archive-3.8.1)

