# # Geometry, physics, boost, CGAL, OpenSCAD
# add_subdirectory(_libassimp)
# add_subdirectory(_libcad)
# #add_subdirectory(de-ode-0.16.5)

# GUI
add_subdirectory(de-fltk-1.3.5)
add_subdirectory(de-wx-3.1.5)

# Internet
add_subdirectory(de-enet-1.3.18)
# # Audio, FFMPEG, MIDI, TAGS, FMOD, FFTs, VST-Plugin SDK, Juce
# add_subdirectory(_libaudio)

add_subdirectory(de-lua-5.4.7)
# add_subdirectory(de-ginac)



# Geometry, physics, boost, CGAL, OpenSCAD
#add_subdirectory(_libassimp)
#add_subdirectory(_libcad)
#add_subdirectory(de-ode-0.16.5)

# GUI
#add_subdirectory(de-fltk-1.3.5)
#add_subdirectory(de-wx-3.1.5)

# Internet
#add_subdirectory(de-enet-1.3.18)
# Audio, FFMPEG, MIDI, TAGS, FMOD, FFTs, VST-Plugin SDK, Juce
#add_subdirectory(_libaudio)

#add_subdirectory(de-lua-5.4.7)
#add_subdirectory(de-sqlite3)
# add_subdirectory(de-ginac)
