# Graphics
add_subdirectory(de-glew-2.1.0)
add_subdirectory(de-glad-4.2)
add_subdirectory(de-soil)
add_subdirectory(de-nanovg)

add_subdirectory(de-glfw-3.3.2-glew)
add_subdirectory(de-glfw-3.3.2-glad)
# add_subdirectory(de-freeglut-3.6.0-static)

add_subdirectory(de-imgui)

# add_subdirectory(de-gles3) # AudioSynth-qt
# add_subdirectory(de-glfw-3.3.2-gles3)

# add_subdirectory(de-irrlicht-1.8.5)
# add_subdirectory(de-irrExt-1.8.5)

add_subdirectory(de-earcut)
add_subdirectory(de-tinyobjloader-2.0.0)
