add_subdirectory(de-openexr-3.3.2)
# Math
add_subdirectory(de-glm-4.20.8)
# Xml
add_subdirectory(de-tinyxml2)
#add_subdirectory(de-expat-3.2.2)
# Images
add_subdirectory(de-png-1.6.23)
add_subdirectory(de-jpeg-8d)
add_subdirectory(de-webp-1.1.0)
add_subdirectory(de-dds-image)
# Fonts
add_subdirectory(de-freetype-2.10.0)
add_subdirectory(de-fontawesome)

### Supported but deactivated for faster compile:
add_subdirectory(de-giflib-5.2.1)
add_subdirectory(de-tiff-4.0.4)
add_subdirectory(de-jpeg-9e)
add_subdirectory(de-stb_image)
add_subdirectory(de-stb_truetype)

add_subdirectory(de-nlohmann-json-3.12.0)
add_subdirectory(de-nanosvg)

add_subdirectory(de-expat-3.2.2)
add_subdirectory(de-rapidjson)

## WorkInProgress:
# add_subdirectory(de-zimg.7z)
# add_subdirectory(de-lunasvg.7z)
add_subdirectory(de-zimg)











# Graphics
#add_subdirectory(de-glew-2.1.0)
#add_subdirectory(de-irrlicht-1.8.5)
#add_subdirectory(de-irrExt-1.8.5)
#add_subdirectory(de-gles3)
#add_subdirectory(de-glad-4.2)
#add_subdirectory(de-glfw-3.3.2-glad)
#add_subdirectory(de-glfw-3.3.2-gles3)

#add_subdirectory(de-fltk-1.3.5)

# Geometry, physics, boost, CGAL, OpenSCAD
#add_subdirectory(_libassimp)
#add_subdirectory(_libcad)
#add_subdirectory(de-ode-0.16.5)

# GUI
#add_subdirectory(de-fltk-1.3.5)
#add_subdirectory(de-wx-3.1.5)

# Internet
#add_subdirectory(de-enet-1.3.18)
# Audio, FFMPEG, MIDI, TAGS, FMOD, FFTs, VST-Plugin SDK, Juce
#add_subdirectory(_libaudio)

#add_subdirectory(de-lua-5.4.7)
#add_subdirectory(de-sqlite3)
# add_subdirectory(de-ginac)
